# lazytorchtools

./: .gitignore  README.md  __init__.py  lazytorchtools.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: test_basic.py
